# wave

./: .gitignore  Dockerfile  NEWS.md  README  README.rst  SConscript  SConstruct  environment.yml  pyproject.toml  setup.py  user_stories.txt
.github/workflows/: python-package.yml
Homepage/: ftptools.py  index.jemdoc  jemdoc.css
Papers/: SConscript
Papers/ICEIS/: SConscript  abstract.tex  archconsist.bib  archconsist.tex  authors.tex  keywords.tex  title.tex
Papers/ICEIS/figures/: INSTICC.eps  figure1.eps  figure2.eps  figure3.eps  figure4.eps  testfig.eps
Papers/ICSR/: Henderson_ICSR09.bib  Henderson_ICSR09.tex  figure1.eps  figure2.eps  figure3.eps  figure4.eps
Papers/MISE/: SConscript  metaconsist.bib  metaconsist.tex  outline.txt
Papers/MISE/figures/: mcfigure1.eps  mcfigure2.eps  mcfigure3.eps
Papers/SEKE/: mcfigure1.eps  mcfigure2.eps  mcfigure3.eps  mcfigure4.eps  mcfigure5.eps  sekeconsist.bib  sekeconsist.tex
Tool/: user_stories.txt
Tool/examples/: RAVSIM3-xmi.xml
Tool/gui/: Doxyfile  dbif.py  setup.py  simplegrid.py  wave-gui.py
Tool/gui/doc/: make.bat
Tool/src/: analysisDoc.py  dbif.py  mm2doc.py  xmi2mm2.py
Wave/: operations.py
doc/: Doxyfile  Makefile  conf.py  index.rst  intro.rst  modules.rst  tutorial.rst
doc/Homepage/: build  upload
docs/: conf.py
gui/doc/: Makefile  conf.py  index.rst
gui/src/Wave/: metamodel.py
src/: browse.py  mm2analyse.py
src/tests/wavelib/: operations_tests.py
src/wharve/: __init__.py
tests/: test_binary.py  test_joins.py  test_unary.py
wavelib/: dbif.py  operations.py
(+7 files in other folders)
