[tool.poetry]
name = "Wave"
version = "0.1.0.9000"
description = "Whole architecture verification."
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src/Wave" }
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
